fix(home): center text on mobile

--- a/src/app/pages/landing/home/home.component.scss
+++ b/src/app/pages/landing/home/home.component.scss
@@ -4,6 +4,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  h1 {
+    text-align: center;
+  }
   .bounceIn2 {
     animation-delay: 0.8s;
   }
